kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-bar-svc
  namespace: default
spec:
  selector:
    app: kube-bar-app
  ports:
    - port: 80
      targetPort: 3002
      protocol: TCP
