kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: tti.kube
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-bar-svc
            port:
              number: 80
